# ziiz-rust-gateway

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
api/: Cargo.toml  Dockerfile  README.md
api/src/: main.rs
api/src/config/: mod.rs
api/src/entities/: countries.rs
api/src/routes/: data.rs  home.rs
api/src/services/: mod.rs
api/src/utils/: date_utils.rs  mod.rs
docker/dev/: .env  up.sh
exchange-rates/: Cargo.toml  README.md
exchange-rates/src/: main.rs
migration/src/: m20220101_000001_create_table.rs
monitoring/prometheus/: Dockerfile  prometheus.yml
settings/: base.toml  dev.toml  prod.toml
src/: errors.rs  lib.rs  main.rs
src/api/: data.rs  mod.rs  payin.rs
src/entity/: countries.rs  mod.rs  prelude.rs
src/models/: mod.rs
src/routes/: data.rs  home.rs  mod.rs
