[package]
name = "ziiz-rust-gateway"
repository = "https://github.com/minimo-io/ziiz-rust-gateway"
version = "0.1.0"
authors = ["Nicolas Erramuspe<nicolas@minimo.io>"]
homepage = "https://minimo.io"
description = "RESTful API for ZiiZ built with Rust"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sea-orm = { version = "1.0.0", features = [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.0.0", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
sentry = "0.34.0"
serde = { version = "1.0.209", features = ["derive"] }
# serde_json = "1.0.127"
uuid = { version = "1.10.0", features = ["v4"] }

env_logger = "0.11.5"
log = "0.4"
# strum = { version = "0.26", features = ["derive"] }