[package]
name = "ziiz-rust-gateway"
repository = "https://github.com/minimo-io/ziiz-rust-gateway"
version = "0.1.0"
authors = ["Nicolas Erramuspe<nicolas@minimo.io>"]
homepage = "https://minimo.io"
description = "RESTful API for ZiiZ built with Rust"
edition = "2021"

[lib]
name = "ziiz"
path = "src/lib.rs"

[[bin]]
name = "ziiz"
path = "src/main.rs"

# [workspace]
# members = [".", "src/entities"]

[dependencies]
actix-web = "4.9.0"
tokio = { version = "1.40.0", features = [ "full" ]}
sea-orm = { version = "1.0.1", features =  [
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
sea-orm-migration = { version = "1.0.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
# entity = { path = "entity" }

sentry = "0.34.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", default-features = false, features = [
  "clock",
  "serde",
] }

env_logger = "0.11.5"
dotenv = "0.15.0"
log = "0.4"
# strum = { version = "0.26", features = ["derive"] }